#93140: [FEATURE] fixed return type for voucher create
